[gd_scene load_steps=3 format=3 uid="uid://c0k2f0lhowxpa"]

[ext_resource type="Texture2D" uid="uid://cayaens4ptupd" path="res://assets/black.jpg" id="1_lt3bf"]
[ext_resource type="Script" uid="uid://bsupxnck2c7nt" path="res://scripts/fim_de_jogo.gd" id="1_x10pv"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_x10pv")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.690196)
position = Vector2(576, 312)
texture = ExtResource("1_lt3bf")

[node name="Label" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 126.0
offset_top = 120.0
offset_right = 989.0
offset_bottom = 170.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 36
text = "Você completou a música com sucesso!"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 358.0
offset_top = 224.0
offset_right = 748.0
offset_bottom = 274.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 36
text = "Sua pontuação foi de:"

[node name="Label3" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 358.0
offset_top = 32.0
offset_right = 748.0
offset_bottom = 82.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 36
text = "Parabéns!"
horizontal_alignment = 1

[node name="Pontuacao" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 462.0
offset_top = 312.0
offset_right = 631.0
offset_bottom = 362.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 36
text = "0000000"
horizontal_alignment = 1

[node name="SalvarHighscore" type="Button" parent="."]
offset_left = 414.0
offset_top = 380.0
offset_right = 682.0
offset_bottom = 430.0
theme_override_font_sizes/font_size = 30
text = "Salvar pontuação"

[node name="JogarNovamente" type="Button" parent="."]
offset_left = 414.0
offset_top = 445.0
offset_right = 682.0
offset_bottom = 495.0
theme_override_font_sizes/font_size = 30
text = "Jogar novamente?"

[node name="Menu" type="Button" parent="."]
offset_left = 406.0
offset_top = 515.0
offset_right = 693.0
offset_bottom = 565.0
theme_override_font_sizes/font_size = 30
text = "Voltar para o menu"

[node name="Sprite2D2" type="Sprite2D" parent="."]
position = Vector2(834, 347)
scale = Vector2(1.8, 1.8)

[connection signal="pressed" from="SalvarHighscore" to="." method="_on_salvar_highscore_pressed"]
[connection signal="pressed" from="JogarNovamente" to="." method="_on_jogar_novamente_pressed"]
[connection signal="pressed" from="Menu" to="." method="_on_menu_pressed"]
